--- a/FoodFight/app/src/main/res/layout/fragment_home.xml
+++ b/FoodFight/app/src/main/res/layout/fragment_home.xml
@@ -3,13 +3,12 @@
     android:layout_height="match_parent" tools:context="edu.fhu.foodfight.HomeFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView android:layout_width="match_parent" android:layout_height="match_parent"
-        android:text="HOME" />
+    <ListView
+        android:id="@+id/currentFights"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    </ListView>
 
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/imageButton"
-        android:layout_gravity="center_horizontal|top" />
+
 
 </FrameLayout>
