--- a/FoodFight/app/src/main/res/values/colors.xml
+++ b/FoodFight/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#FF4081</color>
     <color name="darkOrange">#ec5d2f</color>
     <color name="yellow">#ffb235</color>
+    <color name="profileSquareBackground">#EFEFF4</color>
+    <color name="profileCircleBackground">#EF5D2F</color>
 </resources>
