--- a/FoodFight/app/src/main/res/layout/fragment_profile.xml
+++ b/FoodFight/app/src/main/res/layout/fragment_profile.xml
@@ -1,6 +1,8 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
+    android:background="@android:color/white"
     android:fillViewport="true">
 
     <RelativeLayout
@@ -9,13 +11,23 @@
         android:layout_height="fill_parent"
         android:orientation="vertical" >
 
+
+        <ImageView
+            android:id="@+id/profileImage"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:scaleType="centerCrop"
+            android:layout_gravity="center"
+            android:src="@drawable/profilephoto" />
+        <!--
         <ImageView
             android:id="@+id/profileImage"
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_centerHorizontal="true"
+            android:paddingTop="15dp"
             android:src="@drawable/profilephoto" />
-
+-->
         <TextView
             android:id="@+id/profileName"
             android:layout_width="fill_parent"
@@ -26,11 +38,6 @@
             android:textSize="15pt"
             android:text="Avery Cupples"/>
 
-        <TextView
-            android:background="@drawable/rectangle"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:layout_below="@id/profileName"/>
 
         <LinearLayout
             android:id="@+id/profileLinearLayout"
