--- a/FoodFight/app/src/main/res/layout/fragment_camera.xml
+++ b/FoodFight/app/src/main/res/layout/fragment_camera.xml
@@ -3,7 +3,96 @@
     android:layout_height="match_parent" tools:context="edu.fhu.foodfight.CameraFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView android:layout_width="match_parent" android:layout_height="match_parent"
-        android:text="CAMERA" />
+
+    <RelativeLayout
+        android:id="@+id/cameraRelativeLayout"
+        android:layout_width="match_parent"
+        android:layout_height="275dp"
+        android:background="@drawable/rectangle_without_circle"
+        android:layout_margin="16dp"
+        android:layout_gravity="top">
+
+        <ImageButton
+            android:id="@+id/imageButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:background="@drawable/camera1"
+            android:clickable="true"></ImageButton>
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_marginBottom="8dp"
+        android:layout_gravity="bottom"
+        android:layout_marginTop="8dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginLeft="0dp">
+        <ToggleButton
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:textOn="Breakfast"
+            android:textOff="Breakfast"
+            android:id="@+id/toggleButton1"
+            android:layout_gravity="center_horizontal|bottom"
+            android:clickable="true"
+            android:enabled="true"
+            android:textColor="#ffffff"
+            android:background="@color/colorPrimary"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginRight="20dp"
+
+            />
+
+        <ToggleButton
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:textOn="Lunch"
+            android:textOff="Lunch"
+            android:id="@+id/toggleButton2"
+            android:layout_below="@id/toggleButton1"
+            android:layout_gravity="center_horizontal|bottom"
+            android:clickable="true"
+            android:enabled="true"
+            android:textColor="#ffffff"
+            android:background="@color/colorPrimary"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginRight="20dp" />
+
+        <ToggleButton
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:textOn="Dinner"
+            android:textOff="Dinner"
+            android:id="@+id/toggleButton3"
+            android:layout_below="@id/toggleButton2"
+            android:layout_gravity="center_horizontal|bottom"
+            android:clickable="true"
+            android:enabled="true"
+            android:textColor="#ffffff"
+            android:background="@color/colorPrimary"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="8dp" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:text="Submit"
+            android:id="@+id/button"
+            android:layout_below="@+id/toggleButton3"
+            android:layout_centerHorizontal="true"
+            android:clickable="true"
+            android:enabled="true"
+            android:textColor="#ffffff"
+            android:background="@color/colorPrimary"/>
+    </RelativeLayout>
+
 
 </FrameLayout>
