--- a/FoodFight/app/src/main/res/layout/fragment_camera.xml
+++ b/FoodFight/app/src/main/res/layout/fragment_camera.xml
@@ -6,11 +6,16 @@
 
     <RelativeLayout
         android:id="@+id/cameraRelativeLayout"
-        android:layout_width="match_parent"
-        android:layout_height="275dp"
+        android:layout_width="fill_parent"
+        android:layout_height="300dp"
         android:background="@drawable/rectangle_without_circle"
-        android:layout_margin="16dp"
-        android:layout_gravity="top">
+        android:layout_margin="30dp"
+        android:layout_gravity="top"
+        android:layout_marginTop="0dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginBottom="0dp"
+        android:adjustViewBounds="true">
 
         <ImageButton
             android:id="@+id/imageButton"
@@ -18,38 +23,59 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:background="@drawable/camera1"
-            android:clickable="true"></ImageButton>
+            android:clickable="true"/>
     </RelativeLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="170dp"
         android:layout_marginBottom="8dp"
         android:layout_gravity="bottom"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="0dp"
         android:layout_marginRight="0dp"
         android:layout_marginLeft="0dp">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:background="@drawable/rectangle_without_circle_small"
+            android:text="description"
+            android:id="@+id/textView"
+            android:layout_centerHorizontal="true"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginRight="30dp"
+            android:textColor="@color/colorPrimary"
+            android:editable="true"
+            android:textAlignment="center"
+            android:singleLine="false"
+            android:password="false"
+            android:longClickable="false"
+            android:gravity="center"/>
+
         <ToggleButton
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="30dp"
             android:textOn="Breakfast"
             android:textOff="Breakfast"
             android:id="@+id/toggleButton1"
+            android:layout_below="@id/textView"
             android:layout_gravity="center_horizontal|bottom"
             android:clickable="true"
             android:enabled="true"
             android:textColor="#ffffff"
             android:background="@color/colorPrimary"
-            android:layout_marginLeft="20dp"
+            android:layout_marginLeft="30dp"
             android:layout_marginTop="0dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginRight="20dp"
+            android:layout_marginBottom="4dp"
+            android:layout_marginRight="30dp"
 
             />
 
         <ToggleButton
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="30dp"
             android:textOn="Lunch"
             android:textOff="Lunch"
             android:id="@+id/toggleButton2"
@@ -59,14 +85,14 @@
             android:enabled="true"
             android:textColor="#ffffff"
             android:background="@color/colorPrimary"
-            android:layout_marginLeft="20dp"
+            android:layout_marginLeft="30dp"
             android:layout_marginTop="0dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginRight="20dp" />
+            android:layout_marginBottom="4dp"
+            android:layout_marginRight="30dp" />
 
         <ToggleButton
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="30dp"
             android:textOn="Dinner"
             android:textOff="Dinner"
             android:id="@+id/toggleButton3"
@@ -76,14 +102,14 @@
             android:enabled="true"
             android:textColor="#ffffff"
             android:background="@color/colorPrimary"
-            android:layout_marginLeft="20dp"
+            android:layout_marginLeft="30dp"
             android:layout_marginTop="0dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginBottom="8dp" />
+            android:layout_marginRight="30dp"
+            android:layout_marginBottom="4dp" />
 
         <Button
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="40dp"
             android:text="Submit"
             android:id="@+id/button"
             android:layout_below="@+id/toggleButton3"
@@ -92,6 +118,7 @@
             android:enabled="true"
             android:textColor="#ffffff"
             android:background="@color/colorPrimary"/>
+
     </RelativeLayout>
 
 
