--- a/FoodFight/app/src/main/res/layout/fragment_camera.xml
+++ b/FoodFight/app/src/main/res/layout/fragment_camera.xml
@@ -19,8 +19,10 @@
 
         <ImageButton
             android:id="@+id/imageButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:scaleType="centerCrop"
+            android:layout_gravity="center"
             android:layout_centerInParent="true"
             android:background="@drawable/camera1"
             android:clickable="true"/>
