--- a/FoodFight/app/src/main/res/layout/fragment_profile.xml
+++ b/FoodFight/app/src/main/res/layout/fragment_profile.xml
@@ -12,22 +12,16 @@
         android:orientation="vertical" >
 
 
-        <ImageView
-            android:id="@+id/profileImage"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:scaleType="centerCrop"
-            android:layout_gravity="center"
-            android:src="@drawable/profilephoto" />
-        <!--
-        <ImageView
+        <edu.fhu.foodfight.MLRoundedImageView
             android:id="@+id/profileImage"
             android:layout_width="150dp"
             android:layout_height="150dp"
+            android:paddingTop="0dp"
+            android:src="@drawable/profilephoto"
+            android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:paddingTop="15dp"
-            android:src="@drawable/profilephoto" />
--->
+            android:layout_marginTop="20dp" />
+
         <TextView
             android:id="@+id/profileName"
             android:layout_width="fill_parent"
