Image Circular Fix
- Fix App crash because of circular image
- CircleImageView class is now to be used instead of MLRoundedImageView

--- a/FoodFight/app/src/main/res/layout/fragment_profile.xml
+++ b/FoodFight/app/src/main/res/layout/fragment_profile.xml
@@ -12,13 +12,12 @@
         android:orientation="vertical" >
 
 
-        <edu.fhu.foodfight.MLRoundedImageView
+        <edu.fhu.foodfight.CircleImageView
             android:id="@+id/profileImage"
             android:layout_width="150dp"
             android:layout_height="150dp"
-            android:paddingTop="0dp"
             android:src="@drawable/profilephoto"
-            android:layout_alignParentTop="true"
+            android:scaleType="centerCrop"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="20dp" />
 
