--- a/FoodFight/app/src/main/res/layout/fragment_meal_details.xml
+++ b/FoodFight/app/src/main/res/layout/fragment_meal_details.xml
@@ -1,9 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:weightSum="1"
-    android:background="#FFFFFF">
+    android:background="#FFFFFF"
+    tools:context="edu.fhu.foodfight.MealDetailsFragment">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -63,8 +64,8 @@
             android:id="@+id/description"
             android:layout_below="@+id/space2"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:background="@drawable/meal_detail_description_border">
+            android:layout_alignParentStart="true">
+            <!--android:background="@drawable/meal_detail_description_border">-->
 
             <TextView
                 android:layout_width="wrap_content"
