--- a/FoodFight/app/src/main/res/layout/fragment_profile.xml
+++ b/FoodFight/app/src/main/res/layout/fragment_profile.xml
@@ -344,17 +344,20 @@
             android:layout_below="@id/bestMealsTextView"
             android:orientation="horizontal">
 
-            <ImageView
+            <edu.fhu.foodfight.SquareImageView
+                android:id="@+id/bestMealBreakfast"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:src="@drawable/plate7"/>
-            <ImageView
+            <edu.fhu.foodfight.SquareImageView
+                android:id="@+id/bestMealLunch"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:src="@drawable/plate7"/>
-            <ImageView
+            <edu.fhu.foodfight.SquareImageView
+                android:id="@+id/bestMealDinner"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -415,16 +418,19 @@
             android:orientation="horizontal">
 
             <ImageView
+                android:id="@+id/worstMealBreakfast"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:src="@drawable/plate7"/>
             <ImageView
+                android:id="@+id/worstMealLunch"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:src="@drawable/plate7"/>
             <ImageView
+                android:id="@+id/worstMealDinner"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
