--- a/FoodFight/app/src/main/res/layout/fragment_camera.xml
+++ b/FoodFight/app/src/main/res/layout/fragment_camera.xml
@@ -1,7 +1,8 @@
 
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" tools:context="edu.fhu.foodfight.CameraFragment">
+    android:layout_height="match_parent" tools:context="edu.fhu.foodfight.CameraFragment"
+    android:onClick="loseFocus" android:id="@+id/mainFrameLayout" android:focusableInTouchMode="true">
 
     <!-- TODO: Update blank fragment layout -->
 
@@ -20,7 +21,7 @@
         android:layout_marginBottom="0dp"
         android:adjustViewBounds="true"
         android:scaleType="fitStart">
-
+         <requestFocus />
         <ImageButton
             android:id="@+id/imageButton"
             android:layout_width="50dp"
@@ -35,31 +36,36 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="170dp"
+        android:layout_height="200dp"
         android:layout_marginBottom="8dp"
         android:layout_gravity="bottom"
         android:layout_marginTop="0dp"
         android:layout_marginRight="0dp"
-        android:layout_marginLeft="0dp">
+        android:layout_marginLeft="0dp"
+        android:layout_below="@id/cameraRelativeLayout">
 
-        <TextView
+        <EditText
             android:layout_width="match_parent"
-            android:layout_height="30dp"
+            android:layout_height="wrap_content"
             android:background="@drawable/rectangle_without_circle_small"
             android:text="description"
-            android:id="@+id/textView"
+            android:textAlignment="center"
+            android:id="@+id/editText"
             android:layout_centerHorizontal="true"
             android:layout_marginLeft="30dp"
             android:layout_marginTop="0dp"
             android:layout_marginBottom="8dp"
             android:layout_marginRight="30dp"
             android:textColor="@color/colorPrimary"
-            android:editable="true"
-            android:textAlignment="center"
+            android:ems="10"
+            android:gravity="center_horizontal"
+            android:inputType="textMultiLine"
+            android:lines="1"
+            android:minLines="1"
+            android:paddingBottom="20dp"
             android:singleLine="false"
-            android:password="false"
-            android:longClickable="false"
-            android:gravity="center"/>
+            android:scrollbars="vertical">
+        </EditText>
 
         <ToggleButton
             android:layout_width="match_parent"
@@ -67,7 +73,7 @@
             android:textOn="Breakfast"
             android:textOff="Breakfast"
             android:id="@+id/toggleButton1"
-            android:layout_below="@id/textView"
+            android:layout_below="@id/editText"
             android:layout_gravity="center_horizontal|bottom"
             android:clickable="true"
             android:enabled="true"
@@ -115,16 +121,17 @@
             android:layout_marginBottom="4dp" />
 
         <Button
+            android:id="@+id/submitButton"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:text="Submit"
-            android:id="@+id/button"
             android:layout_below="@+id/toggleButton3"
             android:layout_centerHorizontal="true"
             android:clickable="true"
             android:enabled="true"
             android:textColor="#ffffff"
-            android:background="@color/colorPrimary"/>
+            android:background="@color/colorPrimary"
+            android:focusableInTouchMode="true"/>
 
     </RelativeLayout>
 
