--- a/FoodFight/app/src/main/res/drawable/circle.xml
+++ b/FoodFight/app/src/main/res/drawable/circle.xml
@@ -1,13 +1,9 @@
-<shape
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="ring"
-    android:innerRadius="0dp"
-    android:thickness="50dp"
-    android:useLevel="false">
-
-    <solid android:color="@android:color/holo_green_dark" />
-
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="oval">
+    <solid android:color="@color/darkOrange" />
     <size
         android:height="50dp"
-        android:width="50dp" />
+        android:width="50dp" >
+    </size>
+    <stroke android:width="2px" android:color="@color/yellow"/>
 </shape>
